[project]
name = "kubeconfig-manager"
version = "1.1.0"
description = "A Python CLI that merges multiple Kubernetes kubeconfig files into your main $HOME/.kube/config, deep-diffs duplicate entries, and interactively prompts you to overwrite or keep existing settings."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
]

